--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-大謝可擊(天谢可击)&ndash;他對普通人大大的感謝，可以攻擊他虛偽。形容黑白顛倒。
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 「紙老虎，不要怕！」爺爺不急不慢的喊到。
+「會飛！」孫子喊到。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -167,7 +167,8 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-大橋流水(大桥流水)&ndash;很大的橋，下面有流水。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+門內漢(门内汉)&ndash;已入門的人。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 27, 2021</time>
@@ -182,8 +183,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-兵大厭詐(兵大厌诈)&ndash;兵很大，不喜歡用欺騙的手段。形容棋局中的正面戰。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+入門的充要條件是老師在門裡面，就這麼簡單。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 27, 2021</time>
@@ -198,7 +198,8 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-兵小厭詐(兵小厌诈)&ndash;兵很小，不喜歡被騙。形容學棋者希望循序漸進的心情。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+真才實宇(真才实宇)&ndash;真正的才能，實在的宇宙。形容真實的世界。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 27, 2021</time>
