deploy: e226bba6cfc0e57f0d1965fb2a9cc29eab64ff98

--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-動若說兔(动若说兔)&ndash;動作好像在說兔子。形容幼兒看到新鮮事物的興奮。
+她把臉貼在名單上，想看看到底哪個女生是他說的低調女。
+「抄了3遍就退學的那個」他說。
+「就這麼簡單？」她說。
+「就這麼簡單」他說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -119,7 +122,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-她把臉貼在屏幕上，想看看到底哪個女生是他說的最安靜的那個。
+她把臉貼在屏幕上，想看看到底哪個女生是他說的乖乖女。
 「被罰抄10遍的那個」他說。
 「就這麼簡單？」她說。
 「就這麼簡單」他說。
