deploy: 64276ad4cd2826b1190d069c5d0bfc91c1b472f4

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-小搖小擺(小搖小擺)&ndash;小小的搖動著身體。
+不甘小弱&ndash;不甘心自己弱小。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -87,7 +87,10 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-禾高氣爽(禾高气爽)&ndash;看到莊稼長高了，心裡很爽快。
+成功學原理(數字典藏版)
+&mldr;&mldr;
+好的名字是成功的13.33%~93.33%
+&mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -103,7 +106,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-她把臉貼在名單上，想看看到底哪個女生是他說的低調女。
+她把臉貼在名單上，想看看到底哪個女生是他說的明星校友。
 「抄了3遍就退學的那個」他說。
 「就這麼簡單？」她說。
 「就這麼簡單」他說。
