deploy: 0a47e12d62192fc60dccd62f86f4865afa0c0aae

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-關門訂句(关门订句)&ndash;把門關起來修訂語句。形容兒童學習的決心，後亦用於形容程序員調試程序的決心。
+關門訂句(关门订句)&ndash;把門關起來修訂語句。形容兒童完成作業的決心，後亦用於形容程序員完成程序的決心。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
