deploy: 42ed5fa36db3cbbe2827e9332af35147e877c0cc

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-寸步雄行–做出偉大的行為，腳只動了一寸。形容壯舉。
+寸步雄行–做出偉大的行動，腳只動了一寸。形容壯舉。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
