--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-寸步雄行–做出偉大的行動，腳只動了一寸。形容壯舉。
+&ldquo;&mldr;&mldr;
+普羅米修斯（英語：Prometheus；古希臘語：Προμηθεύς），在希臘神話中，是泰坦神族的神明之一，名字的意思是「先見之明」。他是大地之母蓋亞與烏拉諾斯的女兒忒彌斯與伊阿珀托斯的兒子。與伊比米修斯是兄弟，兩兄弟曾一同被囚禁在塔爾塔洛斯中。
+普羅米修斯與智慧女神雅典娜共同創造了人類，普羅米修斯負責用泥土雕塑出人的形狀，雅典娜則為泥人灌注靈魂，並教會了人類很多知識。當時宙斯禁止人類用火，他看到人類生活的困苦，幫人類從阿波羅偷取了火，因此觸怒宙斯。宙斯為了懲罰人類，將潘朵拉的盒子放到人間。再將普羅米修斯鎖在高加索山的懸崖上，每天派一隻鷹去吃他的肝，又讓他的肝每天重新長上，使他日日承受被惡鷹啄食肝臟的痛苦。然而普羅米修斯始終堅毅不屈。幾千年後，海克力士為尋找金蘋果來到懸崖邊，把惡鷹射死，並讓半人半馬的肯陶洛斯族的凱隆來代替，解救了普羅米修斯。但他必須永遠戴一隻鐵環，環上鑲上一塊高加索山上的石子，以便宙斯可以自豪地宣稱他的仇敵仍被鎖在高加索山的懸崖上。
+&mldr;&mldr;&rdquo;
+&ndash;Wi&mldr; &mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
