--- a/index.html
+++ b/index.html
@@ -46,25 +46,6 @@
 <div class=article-content>
 <article>
 <h2>
-<a href=https://blog.jinreal.com/posts/uf-material-378/>
-【非真實地場】資料(378)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&ldquo;&mldr;&mldr;
-海克力斯（古希臘語：Ἡρακλῆς，Hēraklēs，引申自Hēra「希拉」和kleos「榮耀」，即海克力斯被稱為希拉的榮耀[1]，轉寫：Heracles，音譯赫剌克勒斯、海格力斯、海克力士、赫克力士），是希臘神話最偉大的半神英雄，男性的傑出典範，偉大的海克力斯後裔祖先。海克力斯相當於羅馬神話里的赫丘利（海克力斯），後來的羅馬皇帝，比如康茂德和馬克西米安都常常以其自居。羅馬人基本採用希臘人對海克力斯生活和事蹟刻畫的版本，並零星的補充一些羅馬風格的細節，有些甚至將其和統一地中海的英雄聯繫起來。在羅馬也曾大行對赫丘利的崇拜之風。
-&mldr;&mldr;&rdquo;
-&ndash;Wi&mldr; &mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 29, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-377/>
 【非真實地場】資料(377)
 </a>
@@ -73,7 +54,7 @@
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 &mldr;&mldr;
 「跳。。怎麼可能？你是在開玩笑嗎？」他說。
-「腳拖在地上才是，以及滑動。。一般會出現滑動」他接著說。
+「腳是拖在地上的，還有滑動，一般會出現滑動」他接著說。
 &mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
@@ -212,6 +193,22 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 「紙老虎，不要怕！」爺爺不急不慢的喊到。
 「會飛！」孫子喊到。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 27, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-368/>
+【非真實地場】資料(368)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+門內漢(门内汉)&ndash;已入門的人。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
