deploy: cc6a1542bb5484fd02d142834e8aaef7beb75df9

--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-382/>
+【非真實地場】資料(382)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+人類成功學原理(數字版)&mldr;&mldr;
+好的前十年是世紀成功的53%
+很好的前十年是世紀成功的64%
+&mldr;&mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>December 22, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-381/>
 【非真實地場】資料(381)
 </a>
@@ -195,25 +214,6 @@
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 她把臉貼在名單上，想看看到底哪個女生是他說的明星校友。
 「抄了3遍就退學的那個」他說。
-「就這麼簡單？」她說。
-「就這麼簡單」他說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 27, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-371/>
-【非真實地場】資料(371)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-她把臉貼在屏幕上，想看看到底哪個女生是他說的乖乖女。
-「被罰抄10遍的那個」他說。
 「就這麼簡單？」她說。
 「就這麼簡單」他說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
