deploy: 781887b7adc3055a364cc3aed070706ba42274e2

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 她把臉貼在相冊上，想看看到底哪個女生是他說的魔鬼身材。
-「那個小不點」他說。
+「迷你版的那個」他說。
 「就這麼簡單？」她說。
 「就這麼簡單」他說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
