--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=zh-cn>
 <head>
-<meta name=generator content="Hugo 0.91.1">
+<meta name=generator content="Hugo 0.91.2">
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <meta name=viewport content="width=device-width,initial-scale=1">
@@ -44,6 +44,33 @@
 </nav>
 <div id=content class=content-container>
 <div class=article-content>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-390/>
+【非真實地場】資料(390)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&mldr;&mldr;
+「我聽他在電話裡說一看就是間諜」他說。
+「一看？他真是這麼說的？」她說。
+「我那天忘帶東西回去拿，正好路過那兒，聽的清清楚楚」他說。
+「他非常聰明」她說。
+「不會吧，不是很多人說他笨嗎」他說。
+「十有八九是假裝的」她說。
+「你確定？」他說。
+「當然」她說。
+「為啥？」他說。
+「你想想，能很容易看出來間諜的，要么是很聰明，要么自己就是間諜」她說。
+&mldr;&mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>December 26, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
 <article>
 <h2>
 <a href=https://blog.jinreal.com/posts/uf-material-389/>
@@ -204,25 +231,6 @@
 </div>
 <div class=post-footer>
 <time>December 22, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-379/>
-【非真實地場】資料(379)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-遠視學原理(數字版)&mldr;&mldr;
-&mldr;&mldr;
-欲窮千里目，更上一層樓 欲窮萬里目，更上兩層樓
-&mldr;&mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 29, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
