deploy: 003f92bcebe2ab051d11f82a6e707e493f94e3e2

--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-392/>
+【非真實地場】資料(392)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&mldr;&mldr;
+「那我該怎麼做？」兒子說。
+「像大人一樣？」他說。
+「什麼叫像大人一樣」兒子說。
+&mldr;&mldr;
+「為什麼？」兒子說。
+「小孩子才做選擇，大人全都要」他說。
+「我要像大人一樣，我也全都要」兒子說。
+&mldr;&mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>January 1, 2022</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-391/>
 【非真實地場】資料(391)
 </a>
@@ -214,23 +238,6 @@
 好的前十年是世紀成功的53.33%
 很好的前十年是世紀成功的63.33%
 &mldr;&mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>December 22, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-381/>
-【非真實地場】資料(381)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&mldr;&mldr;
-喊過，愛過，有什麼區別？喊過就是愛過。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
