--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 &mldr;&mldr;
 「為什麼？」兒子說。
 「小孩子才做選擇，大人全都要」他說。
-「我要像大人一樣，我也全都要」兒子說。
+「那我要像大人一樣，我全都要」兒子說。
 &mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
